--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'"/>
+        <meta charset="UTF-8" >
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'" />
 
-        <link rel="stylesheet" href="../node_modules/mathquill/build/mathquill.css"/>
+        <link rel="stylesheet" href="../node_modules/@digabi/mathquill/build/mathquill.css" />
+        <link rel="stylesheet" href="./styling.css" />
+
         <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="../node_modules/mathquill/build/mathquill.js"></script>
+        <script src="../node_modules/@digabi/mathquill/build/mathquill.js"></script>
         <script type="module" src="./renderer/renderer.js"></script>
+        <script>
+            function logCursorCoords(e) {
+                console.log(e.clientX)
+            }
+        </script>
 
         <title>Math Editor</title>
     </head>
     <body>
-        <section id="editing-area" contenteditable="true" style="height: 200px; border: 2px solid black; display: inline-block; width: 100%;"></section>
-        <br>
-        <span id="problem2"></span>
+        <section id="editing-area" contenteditable="true"></section>
     </body>
 </html>
